--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>
-            <a href="./index.html">WebStudio</a>
-          </li>
           <li>
             <a href="">Студия</a>
           </li>
@@ -26,10 +24,10 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -43,21 +41,22 @@
       <!--Skills-->
 
       <section>
+        <h2 hidden>Квалификация и навыки</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
